@@ -21,18 +21,22 @@ function cat_vol_laterality_index(P)
 fprintf('Warning: This only works with spatially registered images in MNI152NLin2009cAsym space (CAT12.8 or newer)\n');
 
 if ~nargin
-  P = spm_select(Inf,'image','Select images for LI estimation',{},pwd,'^T*');
+  P = spm_select(Inf,'image','Select images for LI estimation',{},pwd,'^w.*');
 end
-
-V = spm_vol(P);
-n = size(P,1);
 
 sym_template = '/Users/gaser/Dropbox/GitHub/cat12-templates-atlases/templates_external/y_MNI152NLin2009cAsym_to_MNI152NLin2009cSym.nii';
 Vsym = spm_vol(sym_template);
-wvol = cat_vol_defs(struct('field1',{{sym_template}},'images',{{P}},'interp',5,'modulate',0));
+
+n = size(P,1);
+
+cat_progress_bar('Init',n);
 
 for i = 1:n
-  vol = wvol{1}{i};
+  name = deblank(P(i,:));
+  V = spm_vol(name);
+  wvol = cat_vol_defs(struct('field1',{{sym_template}},'images',{{name}},'interp',5,'modulate',0));
+
+  vol = wvol{1}{1};
   
   % estimate new dimensions for left/right hemisphere
   xdim  = size(vol,1);
@@ -48,10 +52,14 @@ for i = 1:n
   % flip values
   left_data = vol(1:left_xdim,:,:);
   right_data  = flipud(vol(right_xdim:xdim,:,:)); % image should be flipped
+  mx = max(vol(:));
 
   % estimate laterality index
-	LI = (left_data-right_data)./(left_data+right_data+eps);
-	  
+	LI = (right_data-left_data)./(left_data+right_data+eps);
+	
+	% and exclude areas where intensity of tissue is quite low
+	LI((left_data+right_data)<0.01*mx) = 0;
+
   % rename dataname
   [pth,nm,xt] = spm_fileparts(deblank(P(i,:)));
   flipped_name = fullfile(pth, ['LI_' nm xt]);
@@ -63,10 +71,12 @@ for i = 1:n
   Vout.dt(1) = 16;
   Vout.pinfo(1) = 1;
   Vout.mat(1,:) = -Vout.mat(1,:);
-  Vout.mat(1,4) = Vout.mat(1,4) - 1.5;
 
   Vout.descrip = 'Laterality index';
   
-  spm_write_vol(Vout,left_data);
+  spm_write_vol(Vout,LI);
   fprintf('Save LI in %s\n',flipped_name);
+cat_progress_bar('Set',i);
 end
+
+cat_progress_bar('Clear');
